[package]
name = "raygun"
version = "1.0.5"
edition = "2024"

[dependencies]
axum = "0.7"
color-eyre = "0.6"
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
hyper = { version = "1.7", features = ["client", "http1", "server"] }
clap = { version = "4.5", features = ["derive", "env"] }
html-escape = "0.2"
once_cell = "1.19"
regex = "1.12"
